Fix app tab issue on small width mobile phones

--- a/app/assets/stylesheets/components/app-tab.scss
+++ b/app/assets/stylesheets/components/app-tab.scss
@@ -90,6 +90,15 @@
     font-family: 'FatFrank', 'Teko', Arial, sans-serif;
   }
 
+  /* hack for small width mobile phones */
+  @media only screen and (max-width: 400px) {
+    h1 {
+      line-height: 1.2;
+      font-size: 48px;
+      margin-top: -50px;
+    }
+  }
+
   @media #{$medium-up} {
     display: none;
   }
